# pelinker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  install-cuda121.sh  mkdocs.yml  pyproject.toml  run_test.sh
$HOME/data/pelinker/tmp-parquet/: res_tmp.parquet
.cursor/rules/: python-style.mdc
.github/workflows/: build-docs.yml  pre-commit.yml  pypi-publish.yml
data/derived/: 491_within_n_across_disps.csv  properties.go.csv  properties.go.failed.csv.csv  properties.ro.csv  properties.synthesis.0.csv  properties.synthesis.0.sem-div.csv  properties.synthesis.1.csv  properties.synthesis.2.csv  properties.synthesis.2.diverse.csv  properties.synthesis.csv  properties.synthesis.v2.csv  selected_verbial_props_0.csv
data/ground_truth/: sample.0.gt.json
data/raw/: properties.csv
data/test/: link.sample.json  mag_sample.tsv  props.txt
docs/: gen_pages.py  index.md
docs/user_guide/: run_scripts_and_cli.md  vector_representation.md
pelinker/: analysis.py  cluster_composition_viz.py  clustering_fit.py  clustering_fusion_ranking.py  clustering_grid.py  clustering_quality_checkpoint.py  config.py  embedder.py  embedding_fusion.py  grid_export.py  linker_cluster_training.py  linker_kb_lemma.py  manifold_oov_screener.py  matching.py  model.py  model_selection_checkpoint.py  negative_screener.py  onto.py  ops.py  plotting.py  preprocess.py  reporting.py  sampling.py  selection.py  transform.py  util.py  writer.py
pelinker/cli/: fit.py  link_files.py  model_selection.py  pelinker.py  replot.py  save_model.py  server.py
pelinker/conf/: fit.yaml  server.yaml
pelinker/io/: __init__.py  feather.py  json_files.py  parquet.py  reader.py
pelinker/model_selection/: __init__.py  artifacts.py  fine_metadata.py  fusion.py  runner.py  summary.py
pelinker/screener/: ambient_screener.py  projection_screener.py
pelinker/store/: pelinker.model.biobert-stsb.sent.index
run/: README.md  csvcut.py  disambiguate.py  embed_kb_corpus.py  extract_properties_go.py  extract_properties_ro.py  loop.embed.kb.corpus.sh  loop.fit.sh  loop.run.kb.corpus.sh  mag_run.py  merge_properties.py  per_server.py  plot_interterm_dist.py  render_divergent_properties.py  run_kb_corpus.py  save_model.py  select_diverse_entities.py  serve.py  test.pat.align.sh  test_linking.py  test_server.py
run/analysis/: clustering.py  clustering.quality.py  clustering_quality.py  model_selection.py  oov_analysis.py  plot_discrim_dist.py  plot_dispersion_hist.py  plot_interterm_dist.py  pre-classifier-analysis.py  replot.py  replot_dbcv_ari_scatter.py  replot_dbcv_hungarian_scatter.py  replot_fit.py  select_diverse_entities.py
run/experiments/: pattern_tensor_align.py
run/obsolete/experiments/: pattern_tensor_align.py
run/obsolete/testing/: run_pel_test.py
run/preprocessing/: disambiguate.py  extract_properties_go.py  extract_properties_ro.py  merge_properties.py
run/testing/: find_occurences.py  run_pel_description.py  run_pel_disambi.py  run_pel_test.py  test_linking.py  test_server.py
test/: conftest.py  test_chunking_layers.py  test_cluster_composition.py  test_cluster_composition_viz.py  test_cluster_viz.py  test_clustering_fit_alignment.py  test_clustering_fusion_ranking.py  test_clustering_grid_solver.py  test_clustering_quality_checkpoint.py  test_clustering_quality_fine_metadata.py  test_config.py  test_embedding_fusion.py  test_fit_embedding_metadata.py  test_grid_export.py  test_inconsistency.py  test_linker_fused_embeddings.py  test_linker_kb_lemma.py  test_linker_screener_sampling.py  test_manifold_oov_screener.py  test_model.py  test_model_selection_summary.py  test_negative_screener.py  test_pca_quality_pairgrid_export.py  test_pca_residual_gating.py  test_plot_cluster_entity_sankey.py  test_plot_dbcv_ari_scatter.py  test_plot_dbcv_hungarian_scatter.py  test_plot_grid_objective_panel.py  test_preprocess.py  test_replot_fit_pies.py  test_reporting_clustering.py  test_selection_sampling.py  test_text.py  test_util.py  test_vrep.py  test_writer.py
