[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{email = "abelikov@gmail.com", name = "Alexander Belikov"}]
dependencies = [
  "cupy-cuda12x>=13.6.0",
  "dataclass-wizard>=0.35.1",
  "fastapi>=0.115.0,<1",
  "hdbscan>=0.8.41",
  "hydra-core>=1.3.2",
  "joblib>=1.4.2,<2",
  "pandas>=2.3.3",
  "pip>=26.0.1",
  "pyarrow>=23.0.1",
  "rich>=14.1.0",
  "scikit-learn>=1.5.0,<2",
  "scikit-optimize>=0.10.2",
  "sentence-transformers>=3.0.1,<4",
  "spacy>=3.7.5,<4",
  "torch>=2.9.1",
  "transformers>=4.41.2,<5",
  "umap-learn>=0.5.11",
  "uvicorn>=0.42.0",
  "wordfreq>=3.1.1"
]
description = "bio / sci property entity linker"
name = "pelinker"
readme = "README.md"
requires-python = ">=3.10.6"
version = "0.1.3"

[project.optional-dependencies]
dev = [
  "plotly>=6.2.0,<7",
  "pre-commit>=4.0.1,<5",
  "pytest>=9.0.2",
  "seaborn>=0.13.2,<0.14"
]
gpu = [
  "cupy-cuda12x>=13.6.0"
]

[project.scripts]
pelinker-fit = "pelinker.cli.fit:run"
pelinker-serves = "pelinker.cli.server:run"

[tool.hatch.build.targets.sdist]
include = ["pelinker"]

[tool.hatch.build.targets.wheel]
include = ["pelinker"]

[tool.uv]
