[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{email = "abelikov@gmail.com", name = "Alexander Belikov"}]
dependencies = [
  "click>=8.1,<9",
  "cupy-cuda12x>=13.6.0",
  "dataclass-wizard>=0.35.1",
  "fastapi>=0.115.0,<1",
  "hdbscan>=0.8.41",
  "hydra-core>=1.3.2",
  "joblib>=1.4.2,<2",
  "pandas>=2.3.3",
  "pip>=26.0.1",
  "pyarrow>=23.0.1",
  "rich>=14.1.0",
  "scikit-learn>=1.5.0,<2",
  "scikit-optimize>=0.10.2",
  "sentence-transformers>=3.0.1,<4",
  "spacy>=3.7.5,<4",
  "torch>=2.9.1",
  "transformers>=4.41.2,<5",
  "umap-learn>=0.5.11",
  "uvicorn>=0.42.0",
  "wordfreq>=3.1.1"
]
description = "bio / sci property entity linker"
name = "pelinker"
readme = "README.md"
requires-python = ">=3.10.6"
version = "0.2.0"

[project.optional-dependencies]
dev = [
  "bumplot>=0.2.1",
  "plotly>=6.2.0,<7",
  "pre-commit>=4.0.1,<5",
  "pysankey>=0.0.1",
  "pytest>=9.0.2",
  "seaborn>=0.13.2,<0.14"
]
docs = [
  "griffe<2.0.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-material>=9.6.14",
  "mkdocs>=1.6.1",
  "mkdocstrings-python>=2.0.3",
  "mkdocstrings[python]>=0.29.1"
]
gpu = [
  "cupy-cuda12x>=13.6.0"
]

[project.scripts]
pelinker-fit = "pelinker.cli.fit:run"
pelinker-link-files = "pelinker.cli.link_files:main"
pelinker-serves = "pelinker.cli.server:run"

[tool.hatch.build.targets.sdist]
include = ["pelinker"]

[tool.hatch.build.targets.wheel]
include = ["pelinker"]

[tool.uv]
